k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ratelimex-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ratelimex

  template:
    metadata:
      labels:
        app: ratelimex

    spec:
      containers:
        - name: ratelimex
          image: ratelimex:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
