k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ratelimex-svc

spec:
  selector:
    app: ratelimex
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
