k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-ingress
spec:
  rules:
    - host: spring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ratelimex-svc
                port:
                  number: 80
